[package]
name = "pct"
version = "0.1.0"
edition = "2021"
description = "Holistic Cli task manager and planner"
license = "CC-BY-NC-ND-4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
clap = { version = "4.4.6", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] } 
thiserror = "1.0.49"
uuid = { version ="1.5.0", features = ["v4","fast-rng","macro-diagnostics",] }
dialoguer = "0.11.0"

[[test]]
name = "test"
path = "tests/test.rs"
