[package]
name = "pocato"
version = "0.2.1"
edition = "2021"
description = "Holistic Cli task manager and planner"
license = "CC-BY-NC-ND-4.0"

# [features]
# gui = []
# cli = []

[[bin]]
name = "pocato"
path = "src/gui.rs"
# required-features = ["gui"]

[[bin]]
name = "pct"
path = "src/cli.rs"
# required-features = ["cli"]


[dependencies]
dirs = "5.0"
clap = { version = "4.4.6", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled"] } 
thiserror = "1.0.49"
uuid = { version ="1.5.0", features = ["v4","fast-rng","macro-diagnostics",] }
dialoguer = "0.11.0"
tabled = { version = "0.14.0", features = ["color"] }
chrono = "0.4.31"
colored = "2.0.4"
toml = "0.8.8"
serde = { version ="1.0.192", features = ["derive"] }
once_cell = "1.18.0"

[[test]]
name = "test"
path = "tests/test.rs"
